--- a/primary.css
+++ b/primary.css
@@ -203,12 +203,17 @@ input {
     }
 
     .menu {
+        flex-grow: 1; /* Take up available space */
+        flex-basis: 20vh; /* Set the minimum height to 20% of the viewport height */
         width: 100%; /* Make the menu take up the full width */
-        overflow: scroll; /* Enable vertical scrolling if content overflows */
+        overflow: auto; /* Enable vertical scrolling if content overflows */
     }
 
     .gallery {
+        flex-grow: 2; /* Take up twice as much available space as the menu */
+        flex-basis: 60vh; /* Set the minimum height to 60% of the viewport height */
         width: 100%; /* Make the gallery take up the full width */
+        overflow: auto; /* Enable vertical scrolling if content overflows */
     }
 
     .scroll-content {
